# colorsort

./: README.md  setup.cfg  setup.py  tox.ini
colorsort/: __init__.py  colorsort.py
colorsort/test/: test_colorsort.py
docs/: index.md
etc/: examples.ipynb
src/colorsort/: colorsort.py
