[metadata]
name = colorsort
version = 0.0.1
author = James Rowland
author_email = rowland.208@gmail.com
description = Perceptually sorted colors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rowland-208/colorsort
project_urls =
    Bug Tracker = https://github.com/rowland-208/colorsort/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires =
    opencv-python>=4.5.3
    colormath>=3.0
    numpy>=1.19.5
    ortools>=9.0
    scipy>=1.5.4
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
